--- a/task.html
+++ b/task.html
@@ -41,7 +41,7 @@
             </div>
             <div class="cols">
                 <div class="box">
-                    <img src="1.webp" alt="">
+                    <img src="2.jpeg" alt="">
                 </div>
             </div>
         </div>
